written service impl logic for LA and Lp